# vvz-doc-store

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PROJECT_PROFILE.yaml  README.md  build.sh  docker-compose.yml  projectid  pyproject.toml
.claude/: CLAUDE.md
.codex/: instructions.md
config/: filewatcher.example.yaml
debian/: changelog  conffiles  control  copyright  debhelper-build-stamp  doc-store-docker-image  doc-store-server.postrm.debhelper  files  install-package.sh  postinst  postrm  rules
doc-store-client/: pyproject.toml
doc-store-client/src/doc_store_client/: __init__.py  client.py  models.py
doc-store-client/tests/: test_client_operations.py  test_distribution.py
docs/agents/: README.md  claude_project_prompt.md  codex_project_prompt.md
docs/api/: api_contract_draft.md
docs/architecture/: canonical_model.md  file_structure.md  overview.md  product_context.md
docs/bug-reports/: 2026-07-12-planmgr-export-download-unavailable-through-mcp-proxy.md
docs/plans/: HRS.md
docs/standards/: planning_standard.md
migrations/: README.md
migrations/versions/: 0001_hierarchy_chunk_root.py  0002_chunk_metrics_feedback.py  0003_chunk_tokens_tags.py  0004_chunk_links_embeddings_metadata.py  0005_entity_lifecycle_registry.py  0006_projects_table.py  0007_files_owner_model.py  0008_semantic_chunk_dictionaries.py  0013_owner_id_all_entities.py  (+8 more)
old_code/: .gitignore-2c470a5b-06ed-4925-8a26-786a289135d6  docs_plans_doc-store_G-001-planning-and-agent-entry_README.yaml-0ff4db09-8bf6-4dbe-993f-a76ef696b7e8  docs_plans_doc-store_G-001-planning-and-agent-entry_T-001-standards-and-plan-files_README.yaml-118232ba-7981-42f7-bb65-f16e133c8f6e  docs_plans_doc-store_G-001-planning-and-agent-entry_T-002-agent-prompts-and-file-structure_README.yaml-04c464da-2305-4490-9465-f4025048a226  docs_plans_doc-store_G-002-ingestion-boundary_README.yaml-2521300c-3056-48e2-b345-dd8ed6ae1610  docs_plans_doc-store_G-003-canonical-storage_README.yaml-f182df18-71bf-4d60-8dc3-1b7a554cfaf6  docs_plans_doc-store_G-004-vectorization_README.yaml-2f05c02b-4a3d-4156-bf20-f76acbdc838f  docs_plans_doc-store_G-005-query-language_README.yaml-eb0390b5-ce44-4ea0-ac4d-9fda23cd7180  docs_plans_doc-store_G-006-quality-and-deployment_README.yaml-9e35e9ab-e328-4ddc-b1c2-42fd501e13f1  docs_plans_doc-store_spec.yaml-2ec3fcd3-943e-47d1-b5a3-6da7196b3fc0  docs_standards_gitignore.tmp-17cacde8-e457-4e92-96eb-63a614efc293  docs_standards_originals_plan_standard_machine.yaml-1d7d5567-5ade-4022-b45e-99596ae77202  index.txt  planning_README.md-c0fd3af0-1536-4990-ae5d-1f2ebf4e3622  planning_TERMINAL_WORKFLOW.yaml-ed18eece-e23a-4bf0-8122-6c0278c3c837  planning_code_analysis_fs_instructions.yaml-0865e1e0-63a3-4cc0-84c1-7315e471913c  planning_code_analysis_search_instructions.yaml-1725cb07-e3bf-4f74-8583-dc28fc36a173
packaging/: config.json  docker-compose.yml  secrets.env.template
scripts/: build-image.sh  build_deb.sh  dev_run_server.sh  docker-entrypoint.sh  get_paragraph_by_number.py  import_docs.py  release_build.sh  verify_runtime_capabilities.py
systemd/: doc-store-filewatcher.service
tests/: test_adapter_baseline.py  test_application_command_surface.py  test_chunk_query_search_command.py  test_chunk_version_commands.py  test_command_registration.py  test_config_cli.py  test_corpus_audit_command.py  test_document_delete_command.py  test_document_rebind_command.py  test_entity_lifecycle_commands.py  test_health_command.py  test_help_surface.py  test_imports.py  test_imports.py.tree  test_info_command.py  test_ingestion_commands.py  test_no_legacy_query_surface.py  test_processing_status_command.py  test_registry_consistency.py  test_retrieval_commands.py  test_runtime_document_service.py  test_semantic_chunk_metadata_command.py  test_semantic_relations_command.py  test_server_manager.py  test_spawn_registration.py  test_text_reconstruction_commands.py  test_text_reconstruction_runtime.py  test_uuid4_command.py
(+235 files in other folders)
