[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-store"
version = "0.1.45"
description = "Documentation storage server."
requires-python = ">=3.11"
authors = [{ name = "Vasiliy Zdanovskiy" }]
dependencies = [
  "alembic>=1.13",
  "asyncpg",
  "pgvector>=0.5",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "mcp-proxy-adapter>=8.10.19",
  "svo-client",
  "embed-client",
  "chunk-metadata-adapter",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
exclude = [
  "doc-store-client/build/",
  "build/",
  "dist/",
]
